--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-color: hsl(0, 0%, 91%);
   display: flex;
   justify-content: center;
