--- a/style.css
+++ b/style.css
@@ -19,33 +19,35 @@ body {
 
 .grid-container {
   display: grid;
-  max-width: 1440px;
+  max-width: 1140px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, min-content);
+  grid-template-rows: repeat(2, 1fr);
   justify-content: space-around;
   gap: 18px;
+  padding: 30px;
 }
 
 .card {
   border-radius: 16px;
   -webkit-box-shadow: -3px 3px 17px 11px rgba(150, 150, 150, 0.5);
   box-shadow: -3px 3px 17px 11px rgba(150, 150, 150, 0.5);
-  padding: 25px;
+  padding: 20px;
 }
 
 .card-header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 .card-header img {
   border-radius: 50px;
   margin-right: 20px;
 }
 
-.header-text {
+.header-text h3 {
   color: white;
+  font-size: 16px;
 }
 .header-text > h3:nth-of-type(2) {
   opacity: 0.6;
@@ -55,6 +57,9 @@ body {
   background-color: hsl(263, 55%, 52%);
   grid-column: 1 / 3;
   grid-row: 1/2;
+  background-image: url("./images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 80% 0;
 }
 #card2 {
   background-color: hsl(217, 19%, 35%);
@@ -90,9 +95,13 @@ body {
 
 .card p {
   opacity: 0.7;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .card h2 {
   margin-bottom: 15px;
+  font-size: 18px;
+}
+
+@media (min-width: 768px) {
 }
