--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
   font-size: 16px;
   color: white;
   font-family: "Barlow Semi Condensed", sans-serif;
@@ -24,7 +23,7 @@ body {
   grid-template-rows: repeat(2, 1fr);
   justify-content: space-around;
   gap: 18px;
-  padding: 30px;
+  padding: 15px;
 }
 
 .card {
@@ -79,7 +78,7 @@ body {
 
 #card4 {
   background-color: hsl(0, 0%, 100%);
-  grid-row: 2/2;
+  grid-row: 2/3;
   color: rgb(87, 87, 87);
 }
 
@@ -90,7 +89,7 @@ body {
 #card5 {
   background-color: hsl(219, 29%, 14%);
   grid-column: 2/4;
-  grid-row: 2/2;
+  grid-row: 2/3;
 }
 
 .card p {
@@ -103,5 +102,52 @@ body {
   font-size: 18px;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 1140px) and (min-width: 768px) {
+  #card1 {
+    grid-column: 1 / 3;
+  }
+  #card2 {
+    grid-column: 3/ 5;
+  }
+
+  #card3 {
+    grid-column: 1/5;
+    grid-row: 2;
+  }
+  #card4 {
+    grid-column: 1/3;
+    grid-row: 3;
+  }
+  #card5 {
+    grid-column: 3/5;
+    grid-row: 3;
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row: auto;
+  }
+  #card1 {
+    grid-column: 1 / 5;
+    grid-row: 1/1;
+  }
+  #card2 {
+    grid-column: 1/ 5;
+    grid-row: 2/2;
+  }
+
+  #card3 {
+    grid-column: 1/5;
+    grid-row: 5/5;
+  }
+  #card4 {
+    grid-column: 1/5;
+    grid-row: 3/3;
+  }
+  #card5 {
+    grid-column: 1/5;
+    grid-row: 4/4;
+  }
 }
