--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   display: grid;
   max-width: 1140px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: auto;
   justify-content: space-around;
   gap: 18px;
   padding: 15px;
@@ -125,29 +125,25 @@ body {
 }
 
 @media (max-width: 768px) {
-  .grid-container {
-    grid-template-columns: repeat(1, 1fr);
-    grid-row: auto;
-  }
   #card1 {
     grid-column: 1 / 5;
-    grid-row: 1/1;
+    grid-row: 1;
   }
   #card2 {
     grid-column: 1/ 5;
-    grid-row: 2/2;
+    grid-row: 2;
   }
 
   #card3 {
     grid-column: 1/5;
-    grid-row: 5/5;
+    grid-row: 5;
   }
   #card4 {
     grid-column: 1/5;
-    grid-row: 3/3;
+    grid-row: 3;
   }
   #card5 {
     grid-column: 1/5;
-    grid-row: 4/4;
+    grid-row: 4;
   }
 }
